--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,15 +1,17 @@
 String releaseFlagFromVersion(String src) {
     // Java 9+ are 9, 10, etc, before was 1.8, 1.7, etc.
     if (src.contains('.')) {
-        src.substring(src.lastIndexOf('.')+1)
+        src.substring(src.lastIndexOf('.') + 1)
     } else {
         src
     }
 }
 
+apply plugin: 'kotlin'
+
 def mrJarVersions = [9]
 
-mrJarVersions.each { version->
+mrJarVersions.each { version ->
     sourceSets {
         "java${version}" {
             java {
@@ -40,7 +42,7 @@ mrJarVersions.each { version->
         enabled = (Integer.parseInt(JavaVersion.current().getMajorVersion()) >= version) &&
                 (!System.env.TEST_JAVA_VERSION || Integer.parseInt(System.env.TEST_JAVA_VERSION) >= version)
     }
-    
+
     configurations."java${version}Implementation".extendsFrom configurations.implementation
     configurations."java${version}TestImplementation".extendsFrom configurations.testImplementation
     configurations."java${version}TestRuntimeClasspath".extendsFrom configurations.testRuntimeClasspath
@@ -54,7 +56,7 @@ tasks.withType(JavaCompile) {
 }
 
 tasks.withType(Jar) {
-    mrJarVersions.each { version->
+    mrJarVersions.each { version ->
         into("META-INF/versions/${version}") {
             from sourceSets."java${version}".output
         }
@@ -78,7 +80,7 @@ tasks.trimShadedJar.doLast {
 tasks.shadedTest.exclude 'META-INF/versions/**'
 
 dependencies {
-    mrJarVersions.each { version->
+    mrJarVersions.each { version ->
         // Common to reference classes in main sourceset from Java 9 one (e.g., to return a common interface)
         "java${version}Implementation" files(sourceSets.main.output.classesDirs) { builtBy compileJava }
 
@@ -95,7 +97,7 @@ dependencies {
     implementation 'com.github.ben-manes.caffeine:caffeine'
 
     // Jackson
-    [ 'jackson-core', 'jackson-annotations', 'jackson-databind' ].each {
+    ['jackson-core', 'jackson-annotations', 'jackson-databind'].each {
         api "com.fasterxml.jackson.core:$it"
     }
 
@@ -106,13 +108,17 @@ dependencies {
     optionalApi 'io.prometheus:simpleclient_common'
 
     // Netty
-    [ 'netty-transport', 'netty-codec-http2', 'netty-codec-haproxy', 'netty-resolver-dns' ].each {
+    ['netty-transport', 'netty-codec-http2', 'netty-codec-haproxy', 'netty-resolver-dns'].each {
         api "io.netty:$it"
     }
     implementation "io.netty:netty-transport-native-unix-common:${managedVersions['io.netty:netty-transport-native-unix-common']}:linux-x86_64"
     implementation "io.netty:netty-transport-native-epoll:${managedVersions['io.netty:netty-transport-native-epoll']}:linux-x86_64"
     implementation 'io.netty:netty-tcnative-boringssl-static'
     implementation 'io.netty:netty-handler-proxy'
+
+    // kotlin
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-reflect"
 
     // Project Reactor
     testImplementation 'io.projectreactor:reactor-test'
